--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
     <!-- Subcategory Selection -->
     <div id="subcategory-section" style="display: none;">
       <label for="subcategory">Select a Subcategory:</label>
-      <select id="subcategory"></select>
+      <select id="subcategory">
+         <option value="">--Choose a Subcategory--</option>
+      <option value="copywriting">Copywriting</option>
+      <option value="marketing">Marketing</option>
+      <option value="seo">Search Engine Optimization</option>
+      <option value="social-media">Social Media</option>
+      <option value="fiction">Fiction</option>
+      <option value="nonfiction">Nonfiction</option>
+      <option value="poetry">Poetry</option>
+      <option value="productivity">Productivity</option>
+      <option value="professionals">Professionals</option>
+      </select>
     </div>
 
     <!-- Model Selection -->
